--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Release-management</h1>
-        <p>Set of deploy scripts for testing ipop-project</p>
+        <p>Provides a suite of scripts for automating the building, deployment, managing and testing of IPOP</p>
 
         <p class="view"><a href="https://github.com/ipop-project/Release-Management">View the Project on GitHub <small>ipop-project/Release-Management</small></a></p>
 
