--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Release-management</h1>
+        <h1>Release-Management</h1>
         <p>Provides a suite of scripts for automating the building, deployment, managing and testing of IPOP</p>
 
         <p class="view"><a href="https://github.com/ipop-project/Release-Management">View the Project on GitHub <small>ipop-project/Release-Management</small></a></p>
